# pocketsmith-beancount-converter

./: .gitignore  .pre-commit-config.yaml  CATEGORIZATION_REPORTS.md  CONTRIBUTING.md  PHASE_7.md  PHASE_8.md  PHASE_9.md  README.md  TESTING.md  TODO.md  approach-comparison.md  approach1-results.md  bean_query_examples.md  categorization_report.py  detailed_report.py  main.py  mypy.ini  pyproject.toml  pytest.ini  query_report.py  transaction_report.py
.claude/commands/: vibe-commit.md
.github/workflows/: pr-checks.yml
.hypothesis/constants/: 5cbf6572a5448b33  5e179620bc8a07b1  7bbdb0c1a56698a4  815c2efe97d2121f  90a3678fc1021ce9  da39a3ee5e6b4b0d  f62d43bb49b9ee7d
.rules/: test.yaml
notes/: 2025-11-29_16-51-00.md  2025-11-29_21-43-34.md  2025-12-01_12-23-23.md
output/: pocketsmith_transactions_20250806_110034.beancount
spec/: PHASE_11.md  PHASE_12.md  TRANSFER_DETECTION.md
src/beancount/: __init__.py  common.py  read.py  update.py  write.py
src/changelog/: __init__.py  changelog.py  printer.py
src/cli/: __init__.py  changelog.py  clone.py  common.py  date_options.py  date_parser.py  diff.py  file_handler.py  pull.py  push.py  (+4 more)
tests/: test_api_writer.py  test_beancount_converter.py  test_data_validation.py  test_edge_cases.py  test_field_resolver.py  test_file_writer.py  test_integration.py  test_main.py  test_pocketsmith_client.py  test_property_based.py  test_real_api_endpoints.py  test_rule_integration.py  test_rule_loader.py  test_rule_models.py  test_sync_cli.py  test_sync_models.py  test_synchronizer.py  test_transaction_comparator.py
(+179 files in other folders)
