[project]
name = "vibe-opencode-pocketsmith-beancount"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beancount>=3.1.0",
    "pocketsmith-api>=2.1.1",
    "python-dotenv>=1.1.1",
    "pytz>=2024.2",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-pytz>=2024.2.0.20241003",
    "types-requests>=2.32.4.20250611",
]
